--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "body-parser": "^1.19.0"
   },
   "repository": {
     "type": "git",
