--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "4.17.1",
-    "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "http-errors": "^1.8.0"
   },
   "repository": {
     "type": "git",
