--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "express": "4.17.1",
     "body-parser": "^1.19.0",
-    "http-errors": "^1.8.0"
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
+    "winston": "3.3.3"
   },
   "repository": {
     "type": "git",
