--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.17.1",
     "body-parser": "^1.19.0",
+    "express": "4.17.1",
     "http-errors": "^1.8.0",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "winston": "3.3.3"
   },
