--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "http-errors": "^1.8.0",
