--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "^1.8.0",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
+    "supertest": "^6.1.3",
     "winston": "3.3.3"
   },
   "repository": {
