--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "4.17.1",
     "http-errors": "^1.8.0",
     "mongoose": "^5.13.2",
+    "mongoose-id-validator": "^0.6.0",
     "morgan": "^1.10.0",
     "supertest": "^6.1.3",
     "winston": "3.3.3"
