--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mongoose-id-validator": "^0.6.0",
     "morgan": "^1.10.0",
     "supertest": "^6.1.3",
-    "winston": "3.3.3"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "3.3.3",
+    "yamljs": "^0.3.0"
   },
   "repository": {
     "type": "git",
