--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "docker:build": "docker build -t nodejs-api-development:latest .",
+    "docker-compose:up": "docker-compose up"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
